# wato_rover

./: .gitignore  .pre-commit-config.yaml  README.md  how 0bb5293d52599317a3e300c55897e34a48e5e289 --numstat  requirements.txt  watod  watod-config.sh
.config/: .yamllint.yaml
config/: params.yaml  rover_foxglove_config.json  wato_asd_training_foxglove_config .json
custom_images/: Dockerfile.clean_base_arm64  Dockerfile.clean_base_x86
docker/: wato_ros_entrypoint.sh
docker/gazebo/: gazeboserver.Dockerfile
docker/robot/: robot.Dockerfile  sim.launch.py
docker/samples/: cpp_aggregator.Dockerfile  cpp_producer.Dockerfile  cpp_transformer.Dockerfile  py_aggregator.Dockerfile  py_producer.Dockerfile  py_transformer.Dockerfile
docker/vis_tools/: foxglove.Dockerfile
docs/: PHONE_CAMERA_OBJECT_DETECTION.md
modules/: docker-compose.gazebo.yaml  docker-compose.robot.yaml  docker-compose.samples.yaml  docker-compose.vis_tools.yaml
rover_urdf/: CMakeLists.txt  package.xml
rover_urdf/config/: joint_names_MR24-DT-A00.00_2.SLDASM.yaml
rover_urdf/launch/: display.launch  gazebo.launch
rover_urdf/meshes/: Center_Right Wheel.STL  Front_Left Wheel.STL  Rear_Left Wheel.STL  Rear_Right Wheel.STL
rover_urdf/urdf/: MR24-DT-A00.00_2.SLDASM.csv  MR24-DT-A00.00_2.SLDASM.urdf
scripts/: Package-Creation.md  add_robot_package.sh  attach_realsense.bat  attach_realsense.ps1  insert_package_copy.sh  mac_camera_stream.py  phone_camera_stream.py  preprocess_elevation.py
src/gazebo/: CMakeLists.txt  package.xml
src/gazebo/launch/: env.urdf  mallet.stl  mars.stl  mars_env.urdf  pick.stl  robot.urdf  robot_env.sdf  rover_base_link.stl  rover_center_left_wheel.stl  rover_center_right_wheel.stl  rover_front_left_wheel.stl  rover_front_right_wheel.stl  rover_rear_left_wheel.stl  rover_rear_right_wheel.stl  rover_wheel.STL  sim.ign  sim.launch.py  water_bottle.stl
src/gazebo/launch/mr24/: robot.urdf
src/perception/: CMakeLists.txt  package.xml
src/perception/src/: pointcloud_converter.cpp
src/robot/arcade_driver/: CMakeLists.txt  package.xml
src/robot/arcade_driver/include/: arcade_driver.hpp
src/robot/arcade_driver/include/arcade_driver/: arcade_driver.hpp
src/robot/arcade_driver/src/: arcade_driver.cpp
src/robot/bringup_robot/: CMakeLists.txt  package.xml
src/robot/bringup_robot/launch/: mac_camera_object_detection.launch.py  robot.launch.py
src/robot/camera_fallback/: CMakeLists.txt  package.xml
src/robot/camera_fallback/src/: camera_fallback_node.cpp
src/robot/camera_from_url/: package.xml  setup.cfg  setup.py
src/robot/camera_from_url/camera_from_url/: __init__.py  camera_from_url_node.py
src/robot/camera_processing/: CMakeLists.txt  package.xml
src/robot/camera_processing/config/: params.yaml
src/robot/camera_processing/include/: camera_processing_core.hpp  camera_processing_node.hpp
src/robot/camera_processing/src/: camera_processing_core.cpp  camera_processing_node.cpp  camera_processing_node.hpp
src/robot/camera_processor/: CMakeLists.txt  package.xml
src/robot/camera_processor/include/: camera_processor_core.hpp  camera_processor_node.hpp
src/robot/camera_processor/src/: camera_processor_core.cpp  camera_processor_node.cpp
src/robot/control/: CMakeLists.txt  package.xml
src/robot/control/config/: params.yaml
src/robot/control/include/: control_core.hpp  control_node.hpp
src/robot/control/include/control/: control_core.hpp  control_node.hpp
src/robot/control/src/: control_core.cpp  control_node.cpp
src/robot/costmap/: CMakeLists.txt  package.xml
src/robot/costmap/config/: params.yaml
src/robot/costmap/include/: costmap_core.hpp  costmap_node.hpp
src/robot/costmap/src/: costmap_core.cpp  costmap_node.cpp
src/robot/goal_finder/: planning.txt
src/robot/goal_finder/src/: goal_finder_node.cpp
src/robot/gps_sim/: CMakeLists.txt  package.xml
src/robot/gps_sim/config/: params.yaml
src/robot/gps_sim/include/: gps_sim_node.hpp
src/robot/gps_sim/src/: gps_sim_node.cpp
src/robot/imu_sim/: CMakeLists.txt  package.xml
src/robot/imu_sim/config/: params.yaml
src/robot/imu_sim/include/: imu_sim_node.hpp
src/robot/imu_sim/include/imu_sim/: imu_sim_node.hpp
src/robot/imu_sim/src/: imu_sim_node.cpp
src/robot/localization/: CMakeLists.txt  package.xml
src/robot/localization/config/: params.yaml
src/robot/localization/include/: localization_core.hpp  (+1 more)
src/robot/map_memory/: CMakeLists.txt
src/robot/motor_speed_controller/: CMakeLists.txt  package.xml
src/robot/motor_speed_controller/include/: motor_speed_controller.hpp
src/robot/motor_speed_controller/include/nlohmann/: json.hpp
src/robot/motor_speed_controller/src/: motor_speed_controller.cpp
src/robot/object_detection/: CMakeLists.txt  package.xml
src/robot/odometry_spoof/: CMakeLists.txt  package.xml
src/robot/pcl_converter/: CMakeLists.txt  package.xml
src/robot/planner/: CMakeLists.txt
src/robot/planner/config/: params.yaml
src/robot/planner/include/: planner_core.hpp  planner_node.hpp
src/robot/planner/src/: planner_core.cpp  planner_node.cpp
src/robot/realsense_driver/: CMakeLists.txt  package.xml
src/robot/robot_navigation/: CMakeLists.txt  package.xml
src/robot/robot_navigation/config/: ekf.yaml  nav2_params.yaml
src/robot/robot_navigation/launch/: navigation.launch.py
src/robot/usgs_pcl/: CMakeLists.txt  package.xml  setup.py
src/robot/usgs_pcl/launch/: usgs_pcl.launch.py
src/robot/usgs_pcl/resource/: usgs_pcl
src/robot/usgs_pcl/scripts/: usgs_pcl
src/robot/usgs_pcl/usgs_pcl/: usgs_pcl.py
src/robot/yolo_inference/: package.xml  setup.cfg  setup.py
src/robot/yolo_inference/yolo_inference/: yolo_inference_node.py
src/samples/: README.md
src/samples/sample_msgs/: package.xml
src/wato_msgs/drivetrain_msgs/: CMakeLists.txt  package.xml
templates/: CMakeLists.txt.in  package.xml.in
templates/include/: package_name_core.hpp.in  package_name_node.hpp.in
templates/src/: package_name_core.cpp.in  package_name_node.cpp.in
watod_scripts/: watod-completion.bash  watod-setup-dev-env.sh  watod-setup-docker-env.sh
(+72 files in other folders)
