<?xml version="1.0"?>
<package format="3">
    <name>camera_from_url</name>
    <version>0.0.0</version>
    <description>Fetches images from an HTTP URL and publishes sensor_msgs/Image (e.g. for Mac camera stream).</description>

    <maintainer email="you@example.com">Your Name</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>ament_python</buildtool_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>python3-opencv</exec_depend>
    <exec_depend>python3-numpy</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
