<?xml version="1.0"?>
<package format="3">
  <name>imu_sim</name>
  <version>0.0.0</version>
  <description>Simulates IMU data by adding noise and bias to ground truth IMU measurements</description>

  <maintainer email="e23zhou@watonomous.ca">Eddy Zhou</maintainer>
  <license>Apache2.0</license>

  <!--https://www.ros.org/reps/rep-0149.html#dependency-tags-->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <!--https://www.ros.org/reps/rep-0149.html#export-->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
