<?xml version="1.0"?>
<package format="3">
  <name>motor_speed_controller</name>
  <version>0.0.0</version>
  <description>Subscribes to /arcade_speed topic and computes 6 motor speeds (3 left, 3 right) using
    l and r as baseline</description>

  <maintainer email="barry.zhang@watonomous.ca">Barry Zhang</maintainer>
  <license>Apache2.0</license>

  <!--https://www.ros.org/reps/rep-0149.html#dependency-tags-->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nlohmann_json</depend>
  <depend>drivetrain_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <!--https://www.ros.org/reps/rep-0149.html#export-->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>