<?xml version="1.0"?>
<package format="2">
    <name>realsense_driver</name>
    <version>0.0.0</version>
    <description>ROS2 package to interface with Intel RealSense D435 camera</description>
    <maintainer email="your.email@example.com">Your Name</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>realsense2_camera</depend>
    <depend>sensor_msgs</depend>
    <depend>librealsense2</depend>


    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>