<?xml version="1.0"?>
<package format="3">
  <name>usgs_pcl</name>
  <version>0.0.0</version>
  <description>Convert USGS .las point cloud data to ROS 2 PointCloud2 messages</description>

  <maintainer email="e23zhou@watonomous.ca">Eddy Zhou</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>laspy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
