<?xml version="1.0"?>
<package format="3">
    <name>yolo_inference</name>
    <version>0.0.0</version>
    <description>ROS 2 node that runs YOLO inference on images from /image.</description>

    <maintainer email="you@example.com">Your Name</maintainer>
    <license>Apache 2.0</license>

    <!-- Build for ament_python -->
    <buildtool_depend>ament_python</buildtool_depend>

    <!-- Runtime ROS deps -->
    <exec_depend>rclpy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>

    <!-- Runtime non-ROS deps resolved by rosdep -->
    <exec_depend>onnxruntime</exec_depend>
    <exec_depend>python3-opencv</exec_depend>
    <exec_depend>python3-numpy</exec_depend>
    <!-- (optional) leave out if we only use ONNX -->
    <exec_depend>python3-torch</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
